@@ -37,24 +37,29 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.14.1</version>
                 <configuration>
                     <forkMode>pertest</forkMode>
                     <parallel>classes</parallel>
                     <perCoreThreadCount>false</perCoreThreadCount>
                     <threadCount>1</threadCount>
                     <runOrder>filesystem</runOrder>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <!--<suiteXmlFile>basic-tests-suite.xml</suiteXmlFile>-->
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>com.evolveum.midpoint.infra</groupId>-->
-            <!--<artifactId>util</artifactId>-->
-            <!--<version>3.3-SNAPSHOT</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+
+        <dependency>
+            <groupId>com.evolveum.midpoint.tools</groupId>
+            <artifactId>test-ng</artifactId>
+            <version>3.3-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
@@ -62,9 +67,19 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.2.0.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
         <dependency>
@@ -83,4 +98,20 @@
             <version>4.0.6.RELEASE</version>
         </dependency>
     </dependencies>
+    <profiles>
+		<profile>
+			<id>guitest</id>
+			<build>
+				<plugins>
+					<plugin>
+					  <artifactId>maven-surefire-plugin</artifactId>
+					  <configuration>
+					    <skip>false</skip>
+                        <argLine>-XX:MaxPermSize=256m</argLine>
+					  </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
